--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </section>
 
             <section class="palavra-jogo">
-                <p>Jogo da Forca</p> //aqui deve ser substituido pela palavra secreta
+                <p>Jogo da Forca</p> <!--aqui deve ser substituido pela palavra secreta-->
             </section>
 
             <section class="sessao-teclado">
