--- a/index.html
+++ b/index.html
@@ -31,36 +31,37 @@
             <section class="sessao-teclado">
                 <div class="teclado">
                     <div class="teclado-linha1">
-                        <button>Q</button>
-                        <button>W</button>
-                        <button>E</button>
-                        <button>R</button>
-                        <button>T</button>
-                        <button>Y</button>
-                        <button>U</button>
-                        <button>I</button>
-                        <button>O</button>
-                        <button>P</button>    
+                        <button id="Q" class="botao-teclado" onclick="clicaLetra('Q');">Q</button>
+                        <button id="W" class="botao-teclado" onclick="clicaLetra('W');">W</button>
+                        <button id="E" class="botao-teclado" onclick="clicaLetra('E');">E</button>
+                        <button id="R" class="botao-teclado" onclick="clicaLetra('R');">R</button>
+                        <button id="T" class="botao-teclado" onclick="clicaLetra('T');">T</button>
+                        <button id="Y" class="botao-teclado" onclick="clicaLetra('Y');">Y</button>
+                        <button id="U" class="botao-teclado" onclick="clicaLetra('U');">U</button>
+                        <button id="I" class="botao-teclado" onclick="clicaLetra('I');">I</button>
+                        <button id="O" class="botao-teclado" onclick="clicaLetra('O');">O</button>
+                        <button id="P" class="botao-teclado" onclick="clicaLetra('P');">P</button>    
                     </div> 
                     <div class="teclado-linha2">
-                        <button>A</button>
-                        <button>S</button>
-                        <button>D</button>
-                        <button>F</button>
-                        <button>H</button>
-                        <button>J</button>
-                        <button>K</button>
-                        <button>L</button>
-                        <button>Ç</button>
+                        <button id="A" class="botao-teclado" onclick="clicaLetra('A');">A</button>
+                        <button id="S" class="botao-teclado" onclick="clicaLetra('S');">S</button>
+                        <button id="D" class="botao-teclado" onclick="clicaLetra('D');">D</button>
+                        <button id="F" class="botao-teclado" onclick="clicaLetra('F');">F</button>
+                        <button id="G" class="botao-teclado" onclick="clicaLetra('G');">G</button>
+                        <button id="H" class="botao-teclado" onclick="clicaLetra('H');">H</button>
+                        <button id="J" class="botao-teclado" onclick="clicaLetra('J');">J</button>
+                        <button id="K" class="botao-teclado" onclick="clicaLetra('K');">K</button>
+                        <button id="L" class="botao-teclado" onclick="clicaLetra('L');">L</button>
+                        <button id="Ç" class="botao-teclado" onclick="clicaLetra('Ç');">Ç</button>
                     </div>
                     <div class="teclado-linha3">
-                        <button>Z</button>
-                        <button>X</button>
-                        <button>C</button>
-                        <button>V</button>
-                        <button>B</button>
-                        <button>N</button>
-                        <button>M</button>
+                        <button id="Z" class="botao-teclado" onclick="clicaLetra('Z');">Z</button>
+                        <button id="X" class="botao-teclado" onclick="clicaLetra('X');">X</button>
+                        <button id="C" class="botao-teclado" onclick="clicaLetra('C');">C</button>
+                        <button id="V" class="botao-teclado" onclick="clicaLetra('V');">V</button>
+                        <button id="B" class="botao-teclado" onclick="clicaLetra('B');">B</button>
+                        <button id="N" class="botao-teclado" onclick="clicaLetra('N');">N</button>
+                        <button id="M" class="botao-teclado" onclick="clicaLetra('M');">M</button>
                     </div>   
                 </div> 
             </section>
