--- a/index.html
+++ b/index.html
@@ -25,10 +25,19 @@
             </section>
 
             <section class="palavra-jogo">
-                <p>Jogo da Forca</p> <!--aqui deve ser substituido pela palavra secreta-->
+                <div id="div-desaparece">
+                    <p>Jogo da Forca</p> <!--aqui deve ser substituido pela palavra secreta-->
+                </div>
+                <div id="palavra-secreta-div">
+                    <!--<div class="palavra-secreta-letra">A</div>
+                    <div class="palavra-secreta-letra">A</div>
+                    <div class="palavra-secreta-letra">A</div>
+                    <div class="palavra-secreta-letra">A</div>
+                </div>-->
+                
             </section>
 
-            <section class="sessao-teclado">
+            <section id="sessao-teclado">
                 <div class="teclado">
                     <div class="teclado-linha1">
                         <button id="Q" class="botao-teclado" onclick="clicaLetra('Q');">Q</button>
@@ -67,9 +76,9 @@
             </section>
 
             <section class="botoes">
-                <button>Novo Jogo</button>
+                <button onclick="iniciaJogo()">Novo Jogo</button>
                 <button>Adicionar Palavra</button>
-                <button>Desistir</button>
+                <button onclick="desisteJogo()">Desistir</button>
             </section>
         </main>
 
