--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <main>
             <section class="sessao-forca">
                 <div class="forca">
-                    <img src="img/forca1.png" id="imagem-forca" onmouseup="mudaImagem();">  
+                    <img src="img/forca.png" id="imagem-forca" onmouseup="mudaImagem();">  
                 </div>
             </section>
 
