--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-        <script src="script.js"></script>
+        <script src="script2.js"></script>
 
     </head>
     <body>
@@ -32,8 +32,8 @@
                     <!--<div class="palavra-secreta-letra">A</div>
                     <div class="palavra-secreta-letra">A</div>
                     <div class="palavra-secreta-letra">A</div>
-                    <div class="palavra-secreta-letra">A</div>
-                </div>-->
+                    <div class="palavra-secreta-letra">A</div>-->
+                </div>
                 
             </section>
 
