--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
             </section>
 
             <div id="popup">
-                <img id="img" src="img/ganhou.png">
-                <p id="mensagem">Parabéns! Você ganhou!</p>
-                <button onclick="novoJogo()">Novo Jogo</button>
+                <div>
+                    <img id="img" src="img/ganhou.png">
+                    <p id="mensagem">Parabéns! Você ganhou!</p>
+                    <button onclick="novoJogo()">Novo Jogo</button>    
+                </div>
             </div>
         </main>
 
