--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
             <div id="popupAddPalavra">
                 <div>
-                    <img src="img/addPalavra.png">
+                    <img src="img/addPalavra2.png">
                     <p>Com qual palavra você que jogar?</p>
                     <input id="input" type="text">
                     <button onclick="adicionaPalavra()">OK</button>
