--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                     <p>Com qual palavra você que jogar?</p>
                     <input id="input" type="text">
                     <button onclick="adicionaPalavra()">OK</button>
+                    <button onclick="fechaPopupAddPalavra()">Sair</button>
                 </div>
             </div>
         </main>
