--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             </div>
             <p>Desenvolvido por: Ana Kariny &copy; 2022</p>
             <p>Oracle Next Education T3 | Alura </p>
+            <img src="img/badge.png" alt="Badge Desafio Jogo da Forca" class="badge">
         </footer>  
     </body>
 </html>
