--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
         <main>
             <section class="sessao-forca">
+                <div id="dica" class="dica"></div>
                 <div class="forca">
                     <img src="img/forca.png" id="imagem-forca">  
                 </div>
@@ -87,8 +88,10 @@
             <div id="popupAddPalavra">
                 <div>
                     <img src="img/addPalavra2.png">
-                    <p>Com qual palavra você que jogar?</p>
-                    <input id="input" type="text">
+                    <p>Palavra</p>
+                    <input id="inputPalavra" type="text">
+                    <p>Dica</p>
+                    <input id="inputDica" type="text">
                     <button onclick="adicionaPalavra()">OK</button>
                     <button onclick="fechaPopupAddPalavra()">Sair</button>
                 </div>
